--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7",
     "mongoose": "^6.2.9",
     "react-router-dom": "^6.3.0"
   }
